--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOTAGIRI VIKRAM - Front End Developer</title>
-    <link rel="stylesheet" href="portcss.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -288,6 +288,7 @@
         </div>
     </footer>
 
-    <script src="portjs.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
